OO-3117: Question states as list in toolbar

--- a/src/main/java/org/olat/modules/qpool/ui/_i18n/LocalStrings_de.properties
+++ b/src/main/java/org/olat/modules/qpool/ui/_i18n/LocalStrings_de.properties
@@ -167,6 +167,7 @@ process.revision.set=Der Status der Frage wurde auf "$\:lifecycle.status.revised
 process.rating.title=Beurteilung
 process.rating=Beurteilung
 process.start.review=Beurteilung starten
+process.states=Status
 question=Itemanalyse
 question.assessmentType=Testart
 question.assessmentType.both=Both
