--- a/src/main/java/org/olat/modules/qpool/ui/_i18n/LocalStrings_en.properties
+++ b/src/main/java/org/olat/modules/qpool/ui/_i18n/LocalStrings_en.properties
@@ -158,17 +158,17 @@ process.start.review.description=After the start of the review process all ratin
 process.start.review.taxonomy.level=Subject
 process.start.review.title=$\:process.start.review
 process.confirm.endOfLife=If a question is end of life, the question can not be used anymore. Do you really want to set the end of life for the question "{0}"?
-process.final=Final
+process.draft.set=The status of the question has been changed to "$\:lifecycle.status.draft".
 process.final.set=The status of the question has been changed to "$\:lifecycle.status.finalVersion".
-process.endOfLife=End of life
 process.endOfLife.set=The end of life has been set.
-process.review=Review
+process.revised.set=The status of the question has been changed to "$\:lifecycle.status.revised".
+process.review.set=The status of the question has been changed to "$\:lifecycle.status.review".
 process.review.started=The review process has been started.
-process.revision=Revision
 process.revision.set=The status of the question has been changed to "$\:lifecycle.status.revised".
 process.rating.title=Review
 process.rating=Review
 process.start.review=Start review
+process.states=Status
 question=Item analysis
 question.assessmentType=Test type
 question.assessmentType.both=Both
