OO-3178: implement search and filter in levels administration

--- a/src/main/java/org/olat/modules/taxonomy/ui/_i18n/LocalStrings_de.properties
+++ b/src/main/java/org/olat/modules/taxonomy/ui/_i18n/LocalStrings_de.properties
@@ -59,6 +59,7 @@ open.taxonomy=anzeigen / bearbeiten
 remove=Entfernen
 selected.taxonomy.qpool=Taxonomy f\u00FCr Fragepool
 selected.taxonomy.tree=Taxonomy f\u00FCr Dokumentenpool
+show.all=Alle anzeigen
 table.competence.empty=Es sind keine Kompetenzen f\u00FCr diesen Taxonomieebene vorhanden.
 table.header.actions=<i class\='o_icon o_icon_actions o_icon-lg'> </i>
 table.header.competence.achievement=Grad
