--- a/src/main/java/org/olat/modules/taxonomy/ui/_i18n/LocalStrings_en.properties
+++ b/src/main/java/org/olat/modules/taxonomy/ui/_i18n/LocalStrings_en.properties
@@ -59,6 +59,7 @@ open.taxonomy=view / edit
 remove=Remove
 selected.taxonomy.qpool=Taxonomy for question pool
 selected.taxonomy.tree=Taxonomy for document pool
+show.all=Show all
 table.competence.empty=There aren't any competences at this level of the taxonomy.
 table.header.actions=<i class\='o_icon o_icon_actions o_icon-lg'> </i>
 table.header.competence.achievement=Achievement
