OO-3117: Tools instead of commands

--- a/src/main/java/org/olat/modules/qpool/ui/_i18n/LocalStrings_de.properties
+++ b/src/main/java/org/olat/modules/qpool/ui/_i18n/LocalStrings_de.properties
@@ -12,6 +12,7 @@ classification.taxonomy.level=Fachbereich
 classification.taxonomy.parents=Pfad
 collection.creationDate=Erstellt am
 collection.name=Name
+commands=Frage
 confirm.delete=Wollen Sie wirklich diese Frage "{0}" l\u00F6schen? Sie wird von allen Gruppen, allen Pools und allen Listen gel\u00F6scht.
 confirm.delete.plural=Wollen Sie wirklich diese Fragen "{0}" l\u00F6schen? Sie werden von allen Gruppen, allen Pools und allen Listen gel\u00F6scht.
 confirm.delete.source=Wollen Sie wirklich diese Liste l\u00F6schen?
