--- a/src/main/java/org/olat/modules/qpool/ui/_i18n/LocalStrings_en.properties
+++ b/src/main/java/org/olat/modules/qpool/ui/_i18n/LocalStrings_en.properties
@@ -12,6 +12,7 @@ classification.taxonomy.level=Subject
 classification.taxonomy.parents=Path
 collection.creationDate=Created at
 collection.name=Name
+commands=Question
 confirm.delete=Do you really want to delete this question "{0}"? It will be deleted from all groups, pools and lists.
 confirm.delete.plural=Do you really want to delete these questions "{0}"? They will be deleted from all groups, pools and lists.
 confirm.delete.source=Do you really want to delete this list?
