OO-3201: check if the current question is not null to be valid and send a special message if the test is finished

--- a/src/main/java/org/olat/ims/qti21/ui/_i18n/LocalStrings_en.properties
+++ b/src/main/java/org/olat/ims/qti21/ui/_i18n/LocalStrings_en.properties
@@ -112,6 +112,7 @@ error.integer=Need to be an integer. Example\: 15, 5, 1
 error.mimetype=$org.olat.core.commons.modules.bc\:WrongMimeType
 error.reload.question=An unexpected error occurred. Please check the answer to your question and save it again.
 error.required.format=Your input is not of the required format.
+error.test.closed=The test is finished.
 error.textEntry.invalid=Your input is not valid
 error.textEntry.invalid.float=Your input must be a number
 error.textEntry.invalid.record=Your input must be a valid number
