OO-3116: tree in subject selection

--- a/src/main/java/org/olat/modules/qpool/ui/admin/_i18n/LocalStrings_en.properties
+++ b/src/main/java/org/olat/modules/qpool/ui/admin/_i18n/LocalStrings_en.properties
@@ -42,7 +42,7 @@ reset.status=Reset all questions to state "draft".
 review.process.confirm.enable.button=Enable
 review.process.confirm.enable.description=It is recommended to reset all questions the the question bank to the status "draft" to create a clean starting position for the introduction of the review process.<br\><br\>The resetting of the question states can not be undone!
 review.process.confirm.enable.title=Enable review process
-review.process.enabled=enable
+review.process.enabled=Review process
 shares.enabled=Groups
 segment.configuration=Question bank
 segment.educational.context=Levels
