OO-3206: add a validation to the translation tool

--- a/src/main/java/org/olat/core/util/i18n/ui/_i18n/LocalStrings_de.properties
+++ b/src/main/java/org/olat/core/util/i18n/ui/_i18n/LocalStrings_de.properties
@@ -84,6 +84,7 @@ edit.customize.crumb.hoover=Formular zum \u00DCbersetzen eines \u00DCbersetzungs
 edit.customize.intro=Kopieren Sie den Begriff aus der Sprache in die Anpassung und ver\u00E4ndern Sie den Begriff nach Ihren Vorstellungen. Sie k\u00F6nnen den Begriff auch \u00FCberspringen und sp\u00E4ter anpassen. Blenden Sie die Vergleichssprache ein, um Ihre Anpassungen in einer anderen Sprache zu \u00FCberpr\u00FCfen.
 edit.customize.target.hover=Klicken Sie in das Eingabefeld um diesen Schl\u00FCssel anzupassen
 edit.error.noitem=Es wurde kein \u00DCbersetzungsschl\u00FCssel gefunden. Kehren Sie zur\u00FCck zur \u00DCbersicht und versuchen Sie es erneut.
+edit.error.invalid.item=\u00DCbersetzungsschl\u00FCssel ist nich g\u00FCltig: {0}
 edit.intro=\u00DCbersetzen Sie den Begriff aus der Referenzsprache in die Zielsprache. Sie k\u00F6nnen den Begriff auch \u00FCberspringen und sp\u00E4ter \u00FCbersetzen. Blenden Sie die Vergleichssprache ein, um Ihre \u00DCbersetzung mit einer anderen Sprache zu \u00FCberpr\u00FCfen.
 edit.progressBar.unitLabel=\u00DCbersetzungsschl\u00FCssel
 edit.target.hover=Klicken Sie in das Eingabefeld um diesen Schl\u00FCssel zu \u00FCbersetzen
