--- a/src/main/java/org/olat/core/util/i18n/ui/_i18n/LocalStrings_en.properties
+++ b/src/main/java/org/olat/core/util/i18n/ui/_i18n/LocalStrings_en.properties
@@ -84,6 +84,7 @@ edit.customize.crumb.hoover=Translation form for translation keys
 edit.customize.intro=Copy this term from your language to the adaption and modify it according to your needs. You can also skip it to adapt it later. Activate a reference language to check your translation by means of another language.
 edit.customize.target.hover=Click inside the box to adapt this key
 edit.error.noitem=No translation key found. Go back to the overview and try again.
+edit.error.invalid.item=The translation is not valid: {0}
 edit.intro=Please translate your term from the reference language to the target language. Alternatively, you can skip that term and translate it later on. Activate another language to compare your translation.
 edit.progressBar.unitLabel=Translation key
 edit.target.hover=Please click inside the input box to translate this key
