--- a/src/main/java/org/olat/login/_i18n/LocalStrings_en.properties
+++ b/src/main/java/org/olat/login/_i18n/LocalStrings_en.properties
@@ -128,7 +128,7 @@ timeout.message=Your session has been timed out or the server has been restarted
 timeout.title=Session timeout
 topnav.help=Help
 topnav.help.alt=Start OpenOLAT Help 
-warning.old.browser=Your browser version is not supported anymore. Please update your browser to make sure OpenOLAT can be run successfully.
+warning.old.browser=Your browser version is not supported anymore. Please update your browser to make sure OpenOLAT can be run successfully. For more information please refer to the <a href="{0}" target="_blank">manual</a>.
 wayf.homesite=University
 wayf.intro=Please select your university.<br><br>You will be redirected for authentication.
 wayf.pleasechoose=Please select your university...
