OO-3117: Status filter in my taxonomies

--- a/src/main/java/org/olat/modules/qpool/ui/_i18n/LocalStrings_en.properties
+++ b/src/main/java/org/olat/modules/qpool/ui/_i18n/LocalStrings_en.properties
@@ -219,6 +219,11 @@ sharing=Share / authors
 sharing.author.name=Name
 sharing.authors=Authors
 sharing.shares=Groups
+source.status.draft=$\:lifecycle.status.draft
+source.status.review=$\:lifecycle.status.review
+source.status.revised=$\:lifecycle.status.revised
+source.status.finalVersion=$\:lifecycle.status.finalVersion
+source.status.endOfLife=$\:lifecycle.status.endOfLife
 technical=Technical
 technical.creation=Created
 technical.editor=Editor
