OO-3116: Save status last modified and all questions list

--- a/src/main/java/org/olat/modules/qpool/ui/_i18n/LocalStrings_de.properties
+++ b/src/main/java/org/olat/modules/qpool/ui/_i18n/LocalStrings_de.properties
@@ -95,6 +95,7 @@ lifecycle.status=Status
 lifecycle.status.draft=Draft
 lifecycle.status.endOfLife=End of life
 lifecycle.status.finalVersion=Final
+lifecycle.status.last.modified=Letzte \u00C4nderung Status
 lifecycle.status.review=Review
 lifecycle.status.revised=Revised
 lifecycle.status.unavailable=Unavailable
@@ -118,6 +119,7 @@ menu.admin.studyfields=Fachbereich
 menu.admin.studyfields.alt=Fachbereich
 menu.admin.types=Fragetyp
 menu.admin.types.alt=Fragetyp
+menu.all.questions=Alle Fragen
 menu.database=Fragendatenbank
 menu.database.alt=Ihre Fragendatenbank
 menu.database.favorit=Meine Favoriten
