--- a/src/main/java/org/olat/modules/qpool/ui/_i18n/LocalStrings_en.properties
+++ b/src/main/java/org/olat/modules/qpool/ui/_i18n/LocalStrings_en.properties
@@ -95,6 +95,7 @@ lifecycle.status=Status
 lifecycle.status.draft=Draft
 lifecycle.status.endOfLife=End of life
 lifecycle.status.finalVersion=Final
+lifecycle.status.last.modified=Status last modified
 lifecycle.status.review=Review
 lifecycle.status.revised=Revised
 lifecycle.status.unavailable=Unavailable
@@ -118,6 +119,7 @@ menu.admin.studyfields=Subject
 menu.admin.studyfields.alt=Subject
 menu.admin.types=Type
 menu.admin.types.alt=Type
+menu.all.questions=All questions
 menu.database=Question database
 menu.database.alt=Your question database
 menu.database.favorit=My favourites
