OO-2967: all a list of the assessment planned today and in the future in assessment tool, add a message if an assessment is done currently

--- a/src/main/java/org/olat/course/assessment/ui/tool/_i18n/LocalStrings_de.properties
+++ b/src/main/java/org/olat/course/assessment/ui/tool/_i18n/LocalStrings_de.properties
@@ -1,4 +1,6 @@
 #Fri Sep 30 15:06:20 CEST 2016
+assessment.mode.now=Es gibt derzeit eine Pr\u00FCfung. 
+assessment.modes.overview=Pr\u00FCfungsmodus
 assessment.status.done=$org.olat.modules.assessment.ui\:assessment.status.done
 assessment.status.inProgress=$org.olat.modules.assessment.ui\:assessment.status.inProgress
 assessment.status.inReview=$org.olat.modules.assessment.ui\:assessment.status.inReview
