--- a/src/main/java/org/olat/course/assessment/ui/tool/_i18n/LocalStrings_en.properties
+++ b/src/main/java/org/olat/course/assessment/ui/tool/_i18n/LocalStrings_en.properties
@@ -1,4 +1,6 @@
 #Thu Dec 07 19:14:03 CET 2017
+assessment.mode.now=There is currently an assessment. 
+assessment.modes.overview=Assessment mode
 assessment.status.done=$org.olat.modules.assessment.ui\:assessment.status.done
 assessment.status.inProgress=$org.olat.modules.assessment.ui\:assessment.status.inProgress
 assessment.status.inReview=$org.olat.modules.assessment.ui\:assessment.status.inReview
