OO-2967: in the popup to extend the time of test, show the list of current assessment mode

--- a/src/main/java/org/olat/course/nodes/iq/_i18n/LocalStrings_de.properties
+++ b/src/main/java/org/olat/course/nodes/iq/_i18n/LocalStrings_de.properties
@@ -29,7 +29,7 @@ confirmation.change.warning.3=Eine Kopie dieser Ergebnis\u00FCbersicht finden Si
 correction.auto=Auto
 correction.manual=Manuell
 correction.mode=Korrektur
-correction.mode.help=Bei einer Auto Korrektur wird das Resultat sofort angezeigt. Bei der Manuell Korrektur muss die Sichtbarkeit im Bewertungswerkzeug geändert werden. Für die Fragetypen Freitext, Zeichnen und Datei hochladen ist Manuell Korrektur zwingend.
+correction.mode.help=Bei einer Auto Korrektur wird das Resultat sofort angezeigt. Bei der Manuell Korrektur muss die Sichtbarkeit im Bewertungswerkzeug ge\u00E4ndert werden. F\u00FCr die Fragetypen Freitext, Zeichnen und Datei hochladen ist Manuell Korrektur zwingend.
 correcttest=Test korrigieren
 coursefolder=Ablageordner Kurs "{0}"
 digital.signature=Testquittung erstellen
@@ -44,7 +44,7 @@ disclaimer.file.invalid=Gewisse Informationen k\u00F6nnen nicht angezeigt werden
 error.assessment.pulled=Das Test wurde von Ihrem Tutor eingezogen.
 error.assessment.stopped=Das Test wurde beendet.
 error.entry.locked=Die gew\u00E4hlte Lernressource wird momentan von {0} editiert. Bitte w\u00E4hlen Sie eine andere Lernressource oder versuchen Sie es sp\u00E4ter nochmals.
-error.reopean.failed=Wiederöffnen des Tests könnte nicht gemacht werden
+error.reopean.failed=Wieder\u00F6ffnen des Tests k\u00F6nnte nicht gemacht werden
 error.self.undefined.long=Es ist kein Selbsttest f\u00FCr "{0}" definiert. W\u00E4hlen Sie einen unter "Selbsttest-Konfiguration" aus.
 error.self.undefined.short=Es ist kein Selbsttest f\u00FCr "{0}" definiert.
 error.surv.undefined.long=Es ist kein Fragebogen f\u00FCr "{0}" definiert. W\u00E4hlen Sie einen unter "Fragebogen-Konfiguration" aus.
@@ -52,10 +52,10 @@ error.surv.undefined.short=Es ist kein Fragebogen f\u00FCr "{0}" definiert.
 error.test.undefined.long=Es ist kein Test f\u00FCr "{0}" definiert. W\u00E4hlen Sie einen unter "Test-Konfiguration" aus.
 error.test.undefined.short=Es ist kein Test f\u00FCr "{0}" definiert.
 error.resource.corrupted=Die Lernresource konnte nicht gelesen werden. Sie ist entweder korrupt oder mit dem falschen Format gespeichert.
-extra.time=Verlängern
-extra.time.explain.1=Die Zeit für den User "{0}" um
-extra.time.explain.2=Minuten verlängern.
-extra.time.warning=<strong>Achtung:</strong> Die Zeit im Prüfungsmodus wird nicht verlängert. Der Prüfungsmodus muss im Menu Prüfungsmodus verlängert werden.
+extra.time=Verl\u00E4ngern
+extra.time.explain.1=Die Zeit f\u00FCr den User "{0}" um
+extra.time.explain.2=Minuten verl\u00E4ngern.
+extra.time.warning=<strong>Achtung:</strong> Die Zeit im Pr\u00FCfungsmodus wird nicht verl\u00E4ngert. Der Pr\u00FCfungsmodus muss im Menu Pr\u00FCfungsmodus verl\u00E4ngert werden.
 fieldset.chosecreateeditfile=Informationstext (HTML-Seite)
 file.name=Gew\u00E4hlte Datei
 info.assessment=Bei diesem Test k\u00F6nnen Ihre Resultate von den Administratoren und den Betreuern dieses Kurses eingesehen werden. 
@@ -138,8 +138,8 @@ qti.form.summary.none=Keine Eingabe notwendig.
 qti.form.summary.section=Sektionszusammenfassung (ohne L\u00F6sungen)
 qti.form.test.title=Test
 reopen=Erneut starten
-reopen.explanation=Dieser Test wurde beendet. Sie können den Test erneut starten. Der Testteilnehmende führt den Test dort weiter, wo er aufgehört hat.
-reopen.test=Beendeten Test wieder öffnen
+reopen.explanation=Dieser Test wurde beendet. Sie k\u00F6nnen den Test erneut starten. Der Testteilnehmende f\u00FChrt den Test dort weiter, wo er aufgeh\u00F6rt hat.
+reopen.test=Beendeten Test wieder \u00F6ffnen
 replace.wizard.information.empty.results=<b>HINWEIS\: Dieser Test/Fragebogen wurde bereits von {0} Teilnehmer(n) begonnen\!</b> Die bisherigen Ergebnisse dieser Nutzer werden mit Klick auf "Fertigstellen" im n\u00E4chsten Schritt gel\u00F6scht.<br /><br /><b>Publizieren Sie schnellstm\u00F6glich Ihren Kurs\!</b> Erst nach dem Publizieren des Kurses k\u00F6nnen die Kursteilnehmer den neu zugeordneten Test/Fragebogen starten und entsprechende Ergebnisse gespeichert werden.
 replace.wizard.information.paragraph1=<b>HINWEIS\: Dieser Test/Fragebogen wurde bereits von {0} Teilnehmer(n) gestartet und zum Teil auch beendet\!</b> Die Ergebnisse der beendeten Tests/Frageb\u00F6gen werden archiviert und mit Klick auf "Fertigstellen" im n\u00E4chsten Schritt gel\u00F6scht.<br /><br />Die archivierten Ergebnisse k\u00F6nnen Sie hier herunterladen\:<br />
 replace.wizard.information.paragraph2=Eine Kopie dieser Ergebnis\u00FCbersicht finden Sie in Ihrem pers\u00F6nlichen Ordner unter\:<br/><i>private/archive/{0}/{1}</i><br /><br /><b>Publizieren Sie zeitnah Ihren Kurs\!</b> Erst nach dem Publizieren des Kurses k\u00F6nnen die Kursteilnehmer den neu zugeordneten Test/Fragebogen starten und entsprechende Ergebnisse gespeichert werden.
@@ -166,9 +166,11 @@ showResults.visibility.future=Die Resultate werden angezeigt sobald die Korrektu
 start=Start
 table.header.lastModified=Last modified
 table.header.results=Resultaten
-tool.delete.data=Alle Daten zurücksetzen
-tool.extra.time=Testzeit verlängern
+tool.delete.data=Alle Daten zur\u00FCcksetzen
+tool.extra.time=Testzeit verl\u00E4ngern
 tool.pull=Laufender test einziehen
 time.limit.max=Zeitbeschr\u00E4nkung
+warning.assessment.mode=Pr\u00FCfung sind am laufen:
+warning.assessment.mode.date={0} von {1} bis {2}
 warning.test.with.essay=$org.olat.ims.qti.editor\:warning.test.with.essay
-warning.users.extra.time=Sie müssen mindesten ein Benutzer auswählen, deren Test man verlängern kann.
+warning.users.extra.time=Sie m\u00FCssen mindesten ein Benutzer ausw\u00E4hlen, deren Test man verl\u00E4ngern kann.
