--- a/src/main/java/org/olat/course/nodes/iq/_i18n/LocalStrings_en.properties
+++ b/src/main/java/org/olat/course/nodes/iq/_i18n/LocalStrings_en.properties
@@ -170,5 +170,7 @@ time.limit.max=Time limit
 tool.delete.data=Reset all data
 tool.extra.time=Extend test time
 tool.pull=Pull running test
+warning.assessment.mode=Test in process:
+warning.assessment.mode.date={0} from {1} til {2}
 warning.test.with.essay=$org.olat.ims.qti.editor\:warning.test.with.essay
 warning.users.extra.time=You need to select a least one user which test can be prolonged.
