OO-3117: Show number of items in review tree nodes

--- a/src/main/java/org/olat/modules/qpool/ui/_i18n/LocalStrings_de.properties
+++ b/src/main/java/org/olat/modules/qpool/ui/_i18n/LocalStrings_de.properties
@@ -220,6 +220,11 @@ sharing=Freigabe / Autoren
 sharing.author.name=Name
 sharing.authors=Autoren
 sharing.shares=Gruppen
+source.status.draft=$\:lifecycle.status.draft ({0})
+source.status.review=$\:lifecycle.status.review ({0})
+source.status.revised=$\:lifecycle.status.revised ({0})
+source.status.finalVersion=$\:lifecycle.status.finalVersion ({0})
+source.status.endOfLife=$\:lifecycle.status.endOfLife ({0})
 technical=Technik
 technical.creation=Erstellt
 technical.editor=Editor
