--- a/src/main/java/org/olat/modules/qpool/ui/_i18n/LocalStrings_en.properties
+++ b/src/main/java/org/olat/modules/qpool/ui/_i18n/LocalStrings_en.properties
@@ -221,11 +221,11 @@ sharing=Share / authors
 sharing.author.name=Name
 sharing.authors=Authors
 sharing.shares=Groups
-source.status.draft=$\:lifecycle.status.draft
-source.status.review=$\:lifecycle.status.review
-source.status.revised=$\:lifecycle.status.revised
-source.status.finalVersion=$\:lifecycle.status.finalVersion
-source.status.endOfLife=$\:lifecycle.status.endOfLife
+source.status.draft=$\:lifecycle.status.draft ({0})
+source.status.review=$\:lifecycle.status.review ({0})
+source.status.revised=$\:lifecycle.status.revised ({0})
+source.status.finalVersion=$\:lifecycle.status.finalVersion ({0})
+source.status.endOfLife=$\:lifecycle.status.endOfLife ({0})
 technical=Technical
 technical.creation=Created
 technical.editor=Editor
