no-jira: translation pt_BR

--- a/src/main/java/org/olat/core/util/i18n/ui/_i18n/LocalStrings_pt_BR.properties
+++ b/src/main/java/org/olat/core/util/i18n/ui/_i18n/LocalStrings_pt_BR.properties
@@ -1,4 +1,4 @@
-#Fri Sep 06 00:02:38 CEST 2013
+#Mon Dec 18 21:58:19 CET 2017
 cache.disabled=Cache de Tradu\u00E7\u00E3o desativado. Esta configura\u00E7\u00E3o tem de ser ajustada dentro do arquivo olat.properties. Recomendamos ativar o cache.
 cache.flush=Esvaziar Cache
 cache.flush.ok=Cache esvaziado
@@ -83,6 +83,7 @@ edit.crumb.link=Chave de Tradu\u00E7\u00E3o
 edit.customize.crumb.hoover=Formul\u00E1rio de tradu\u00E7\u00E3o para chaves de tradu\u00E7nao
 edit.customize.intro=Copie esse termo de seu idioma para a adapta\u00E7\u00E3o e o modifique de acordo com suas necessidades. Voc\u00EA tamb\u00E9m pode deixar e adapt\u00E1-lo depois. Ative um idiona de refer\u00EAncia para verificar sua tradu\u00E7\u00E3o atrav\u00E9s de outro idioma.
 edit.customize.target.hover=Clique dentro da caixa para adaptar esse item
+edit.error.invalid.item=A tradu\u00E7\u00E3o n\u00E3o \u00E9 v\u00E1lida\: {0}
 edit.error.noitem=Nenhuma chave de tradu\u00E7\u00E3o encontrada. Retorne para come\u00E7o e tente novamente.
 edit.intro=Por favor traduza o termo do idioma de refer\u00EAncia para o idioma-alvo. Alternativamente, voc\u00EA pode pular esse termo e traduzi-lo mais tarde. Ativar um outro idioma para comparar a sua tradu\u00E7\u00E3o.
 edit.progressBar.unitLabel=Chave de Tradu\u00E7\u00E3o
