--- a/src/main/java/org/olat/ims/qti21/resultexport/_i18n/LocalStrings_pt_BR.properties
+++ b/src/main/java/org/olat/ims/qti21/resultexport/_i18n/LocalStrings_pt_BR.properties
@@ -1,4 +1,4 @@
-#Thu Mar 16 20:23:35 CET 2017
+#Mon Dec 18 21:57:19 CET 2017
 button.export=Exportar resultados
 button.return=Retornar
 button.show=Exibir
@@ -8,15 +8,21 @@ export.folder.name=Resultados
 table.all.firstname=Primeiro nome
 table.all.id=ID
 table.all.lastname=\u00DAltimo nome
+table.all.node.passed=Elemento de curso aprovado
+table.all.node.score=Pontua\u00E7\u00E3o do elemento do curso
 table.all.passed=Aprovado
+table.all.score=Pontua\u00E7\u00E3o
 table.all.tries=Tentativas
 table.all.username=Usu\u00E1rio
 table.grading=Classifica\u00E7\u00E3o
 table.overview=Vis\u00E3o geral
+table.test.sessions=Tentativas de Teste
 table.user.attempt=Tentativa_
 table.user.date=Data
 table.user.duration=Dura\u00E7\u00E3o
 table.user.email=Email
+table.user.finalScore=Pontua\u00E7\u00E3o Final
 table.user.id=ID
+table.user.manualScore=Pontua\u00E7\u00E3o manual
 table.user.score=Pontua\u00E7\u00E3o
 table.user.trial=Tentativa
