--- a/src/main/java/org/olat/modules/taxonomy/ui/_i18n/LocalStrings_pt_BR.properties
+++ b/src/main/java/org/olat/modules/taxonomy/ui/_i18n/LocalStrings_pt_BR.properties
@@ -1,4 +1,4 @@
-#Thu Nov 23 17:54:07 CET 2017
+#Mon Dec 18 21:57:53 CET 2017
 QuestionItemImpl=Pergunta
 actions=A\u00E7\u00F5es
 add.competence.have=Adicionar "$\:have"
@@ -72,15 +72,18 @@ table.header.taxonomy.level.displayName=N\u00EDvel
 table.header.taxonomy.level.externalId=N\u00EDvel ref. ext.
 table.header.taxonomy.level.identifier=ID N\u00EDvel
 table.header.taxonomy.level.num.children=N\u00FAmero
+table.header.taxonomy.level.type=Tipo de n\u00EDvel
 table.header.taxonomy.level.type.identifier=Tipo de n\u00EDvel
 table.header.type.displayName=Nome
 table.header.type.identifier=Identificador
 table.relations.empty=Atualmente n\u00E3o h\u00E1 rela\u00E7\u00F5es.
 table.taxonomy.empty=N\u00E3o h\u00E1 taxonomia. Para trabalhar com o reservat\u00F3rio de documentos, o banco de perguntas ou com compet\u00EAncia, voc\u00EA precisa primeiro criar uma taxonomia.
+table.taxonomy.level.empty=N\u00E3o h\u00E1 nenhum n\u00EDvel dispon\u00EDvel.
 table.taxonomy.level.type.empty=N\u00E3o h\u00E1 nenhum n\u00EDvel dispon\u00EDvel. Se voc\u00EA quiser trabalhar com o reservat\u00F3rio de documentos ou o banco de perguntas, voc\u00EA precisa de algum tipo de n\u00EDvel.
 target=Alvo
 target.can.read="$\:target" permitido para leitura
 taxonomy.admin.enabled=Ativar taxonomia
+taxonomy.competence.expiration=Data de validade
 taxonomy.competence.fullName=Nome
 taxonomy.competence.type=Compet\u00EAncia
 taxonomy.description=Descri\u00E7\u00E3o
