--- a/src/main/java/org/olat/modules/video/ui/_i18n/LocalStrings_pt_BR.properties
+++ b/src/main/java/org/olat/modules/video/ui/_i18n/LocalStrings_pt_BR.properties
@@ -1,4 +1,4 @@
-#Tue Sep 26 23:33:36 CEST 2017
+#Mon Dec 18 21:58:11 CET 2017
 add.track=Adicionar legenda
 admin.config.enable=Ativar recurso de v\u00EDdeo
 admin.config.hint=Tem certeza de que deseja desativar a transcodifica\u00E7\u00E3o de v\u00EDdeo?
@@ -121,3 +121,4 @@ video.not.replaced=Seu arquivo de v\u00EDdeo n\u00E3o foi substitu\u00EDdo. Esco
 video.replace.desc=Escolha um arquivo de v\u00EDdeo do seu sistema de arquivos. Para substituir o arquivo antigo, confirme pressionando o bot\u00E3o "Substituir v\u00EDdeo".
 video.replace.upload=Enviar arquivo de v\u00EDdeo
 video.replaced=Seu arquivo de v\u00EDdeo foi substitu\u00EDdo e novas resolu\u00E7\u00F5es est\u00E3o sendo transcodificadas.
+warning.no.poster.proposals=As propostas para quadro de cartaz podem ser geradas.
