--- a/src/main/java/org/olat/user/_i18n/LocalStrings_pt_BR.properties
+++ b/src/main/java/org/olat/user/_i18n/LocalStrings_pt_BR.properties
@@ -1,4 +1,4 @@
-#Thu Nov 23 17:54:30 CET 2017
+#Mon Dec 18 22:01:48 CET 2017
 Failed=Falha na carga do arquivo. 
 NoImage=Este formato de arquivo n\u00E3o pode ser carregado como imagem.
 ULLimitExceeded=A imagem n\u00E3o pode exceder {0} kByte.
@@ -153,6 +153,8 @@ user.email.admin.description=Configura\u00E7\u00E3o do endere\u00E7o de e-mail d
 user.email.admin.title=Endere\u00E7o de Email do usu\u00E1rio
 user.email.duplicates={0} usu\u00E1rios n\u00E3o t\u00EAm endere\u00E7o de e-mail exclusivo
 user.email.mandatory=Obrigat\u00F3rio
+user.email.mandatory.disable.confirmation.text=Algumas fun\u00E7\u00F5es n\u00E3o est\u00E3o mais dispon\u00EDveis para os usu\u00E1rios sem um endere\u00E7o de e-mail.<ul><li>Nenhum e-mail ser\u00E1 enviado.</li><li>Nenhuma notifica\u00E7\u00E3o ser\u00E1 enviada.<li>O login com o E-mail n\u00E3o \u00E9 poss\u00EDvel.</li><li>A senha n\u00E3o pode ser redefinida.</li></ul>Recomenda-se ativar a caixa de correio interna.</br>O endere\u00E7o de e-mail pode ser especificado como opcional?
+user.email.mandatory.disable.confirmation.title=Definir E-mail como opcional
 user.email.unique=\u00DAnico
 user.email.unique.disable.confirmation.text=Se a unicidade dos endere\u00E7os de e-mail estiver desativada, algumas fun\u00E7\u00F5es n\u00E3o est\u00E3o dispon\u00EDveis. Ex\: Login com endere\u00E7o de e-mail, notifica\u00E7\u00F5es de redefini\u00E7\u00E3o de senha ou envio de emails reais. Certifique-se de que ativou a caixa de correio interna. Deseja desativar a singularidade dos endere\u00E7os de e-mail?
 user.email.unique.disable.confirmation.title=Desativar endere\u00E7os de e-mail exclusivos
