--- a/src/main/java/org/olat/course/assessment/ui/tool/_i18n/LocalStrings_pt_BR.properties
+++ b/src/main/java/org/olat/course/assessment/ui/tool/_i18n/LocalStrings_pt_BR.properties
@@ -1,4 +1,4 @@
-#Thu Jun 22 17:03:24 CEST 2017
+#Mon Dec 18 21:58:28 CET 2017
 assessment.status.done=$org.olat.modules.assessment.ui\:assessment.status.done
 assessment.status.inProgress=$org.olat.modules.assessment.ui\:assessment.status.inProgress
 assessment.status.inReview=$org.olat.modules.assessment.ui\:assessment.status.inReview
@@ -74,3 +74,4 @@ waiting.review=$org.olat.modules.assessment.ui\:waiting.review
 warning.assessment.docs.delete.text=Voc\u00EA realmente deseja excluir este documento "{0}"?
 warning.assessment.docs.delete.title=Excluir documento
 warning.bulk.done=Voc\u00EA deve escolher pelo menos um elemento n\u00E3o feito.
+warning.course.node.deleted=O elemento do curso foi exclu\u00EDdo.
