--- a/src/main/java/org/olat/ims/qti21/ui/_i18n/LocalStrings_pt_BR.properties
+++ b/src/main/java/org/olat/ims/qti21/ui/_i18n/LocalStrings_pt_BR.properties
@@ -1,4 +1,4 @@
-#Tue Sep 26 22:52:16 CEST 2017
+#Mon Dec 18 21:56:43 CET 2017
 actualPoints=$org.olat.modules.iq\:actualPoints
 admin.12.title=Configura\u00E7\u00F5es QTI 1.2
 admin.menu.title=QTI 2.1
@@ -10,6 +10,13 @@ anonym.user=Usu\u00E1rio an\u00F4nimo
 answer.correct=$org.olat.ims.qti.statistics.ui\:answer.correct
 answer.false=$org.olat.ims.qti.statistics.ui\:answer.false
 answer.noanswer=$org.olat.ims.qti.statistics.ui\:answer.noanswer
+archive.table.header.final.points=$\:table.header.finalScore
+archive.table.header.manual.points=$\:table.header.manualScore
+archive.table.header.node=Curso
+archive.table.header.node.passed=Elemento de curso aprovado
+archive.table.header.node.points=Pontua\u00E7\u00E3o do elemento do curso
+archive.table.header.points=$\:table.header.score
+archive.table.header.test=Teste
 assessment.comment.legend=Use a caixa de texto a seguir se voc\u00EA precisar fornecer qualquer informa\u00E7\u00E3o adicional, coment\u00E1rios ou feedback durante este teste\:
 assessment.item.mark=Adicionar marca\u00E7\u00E3o pessoal como lembrete para rever esta pergunta
 assessment.item.status.answered=Respondido
@@ -103,7 +110,9 @@ error.input.extendedText.min=Escreva um texto com pelo menos {0} palavras.
 error.input.extendedText.min.max=Escreva um texto com pelo menos {0} e no m\u00E1ximo {1} palavras.
 error.integer=Precisa ser um n\u00FAmero inteiro. Exemplo\: 15, 5, 1
 error.mimetype=$org.olat.core.commons.modules.bc\:WrongMimeType
+error.reload.question=Um erro inesperado ocorreu. Verifique a resposta \u00E0 sua pergunta e salve-a novamente.
 error.required.format=Sua entrada n\u00E3o est\u00E1 no formato exigido.
+error.test.closed=O teste est\u00E1 conclu\u00EDdo.
 error.textEntry.invalid=Sua entrada deve ser v\u00E1lida
 error.textEntry.invalid.float=Sua entrada deve ser um n\u00FAmero
 error.textEntry.invalid.record=Sua entrada deve ser um n\u00FAmero v\u00E1lido
