--- a/src/main/java/org/olat/login/oauth/ui/_i18n/LocalStrings_pt_BR.properties
+++ b/src/main/java/org/olat/login/oauth/ui/_i18n/LocalStrings_pt_BR.properties
@@ -1,4 +1,4 @@
-#Thu Nov 23 17:54:24 CET 2017
+#Mon Dec 18 21:58:44 CET 2017
 add.openidconnectif.custom=Adicionar Open ID Connect personalizado
 adfs.admin.title=Sistema federativo de diret\u00F3rio ativo
 adfs.admin.title.alt=Sistema federativo de diret\u00F3rio ativo
@@ -63,6 +63,7 @@ openidconnectif.name.error=Utilize apenas a-z A-Z 0-9. -_. O nome precisa ter pe
 openidconnectif.wait.message=Voc\u00EA ser\u00E1 redirecionado para o OpenOLAT momentaneamente.
 penidconnectif.displayname=Nome de exibi\u00E7\u00E3o
 tequila.admin.title=Tequila
+tequila.admin.title.alt=Tequila
 tequila.api.id=ID cliente
 tequila.api.secret=Segredo do cliente
 tequila.enabled=Tequila
