OO-3116: Configuration if teachers can see final questions

--- a/src/main/java/org/olat/modules/qpool/ui/admin/_i18n/LocalStrings_de.properties
+++ b/src/main/java/org/olat/modules/qpool/ui/admin/_i18n/LocalStrings_de.properties
@@ -24,7 +24,10 @@ delete.type.confirm=Wollen Sie wirklich diesen Typ l\u00F6schen?
 edit.taxonomyLevel=Fachbereich bearbeiten
 educational.context.deleted=Fachbereich wurde erfolgreich gel\u00F6scht
 educational.context.notdeleted=Fachbereich konnte nicht gel\u00F6scht werden, eventuell wird er bereits verwendet
-error.integer.positive=Die Eingabe muss eine positive Zahl sein.
+error.integer.positive=Die Eingabe muss eine positive Zahl sein.final.visibility.manager=Manager
+final.visibility=Sichtbarkeit von finalen Fragen.
+final.visibility.manager=Verwalter
+final.visibility.manager.teacher=Verwalter, Dozent
 item.license.deleted=Lizenz wurde erfolgreich gel\u00F6scht
 item.license.notdeleted=Lizenz konnte nicht gel\u00F6scht werden, eventuell wird er bereits verwendet
 error.item.type.unique=Ein Fragetyp mit diesem Name existiert schon.
