--- a/src/main/java/org/olat/modules/qpool/ui/admin/_i18n/LocalStrings_en.properties
+++ b/src/main/java/org/olat/modules/qpool/ui/admin/_i18n/LocalStrings_en.properties
@@ -25,6 +25,9 @@ educational.context.deleted=Subject has been successfully deleted.
 educational.context.notdeleted=Subject cannot be deleted, it is probably in use.
 error.integer.positive=The number must be positive.
 error.item.type.unique=A question type with this name already exists.
+final.visibility=Visibility of final questions
+final.visibility.manager=Manager
+final.visibility.manager.teacher=Manager, Teacher
 item.license.deleted=License has been successfully deleted.
 item.license.notdeleted=License cannot be deleted, it is probably in use.
 item.type.deleted=Type has been successfully deleted.
