OO-3116: Wording in the review dialog

--- a/src/main/java/org/olat/modules/qpool/ui/_i18n/LocalStrings_de.properties
+++ b/src/main/java/org/olat/modules/qpool/ui/_i18n/LocalStrings_de.properties
@@ -167,6 +167,8 @@ process.review=Beurteilung
 process.review.started=Der Beurteilungsprozess wurde gestartet.
 process.revision=Revision
 process.revision.set=Der Status der Frage wurde auf "$\:lifecycle.status.revised" ge\u00E4ndert.
+process.rating.button=Beurteilen
+process.rating.description=Bewerten Sie bitte die Frage. Jede Frage kann genau einmal bewertet werden. Nach der Bewertung wir diese Frage nicht mehr in der Liste der zu beuteilenden Fagen angezeigt.
 process.rating.title=Beurteilung
 process.rating=Beurteilung
 process.start.review=Beurteilung starten
