--- a/src/main/java/org/olat/modules/qpool/ui/_i18n/LocalStrings_en.properties
+++ b/src/main/java/org/olat/modules/qpool/ui/_i18n/LocalStrings_en.properties
@@ -155,7 +155,7 @@ presentation.8=You can export questions either as learning ressource back into O
 presentation.subtitle=What do I have to do?
 presentation.title=Question bank
 previous=Previous
-provess.comment=Comment
+process.comment=Comment
 process.start.review.button=$\:process.start.review
 process.start.review.description=After the start of the review process all ratings are deleted and the question can not be edited anymore. Do you really want to start the review process for the question "{0}"?
 process.start.review.taxonomy.level=Subject
@@ -165,11 +165,14 @@ process.draft.set=The status of the question has been changed to "$\:lifecycle.s
 process.final.set=The status of the question has been changed to "$\:lifecycle.status.finalVersion".
 process.endOfLife.set=The end of life has been set.
 process.revised.set=The status of the question has been changed to "$\:lifecycle.status.revised".
+process.review=Review
 process.review.set=The status of the question has been changed to "$\:lifecycle.status.review".
 process.review.started=The review process has been started.
 process.revision.set=The status of the question has been changed to "$\:lifecycle.status.revised".
+process.rating.button=Rate
+process.rating.description=Please rate the question. You are only once able to rate a question. After the rating the question is not in the list of the review questions anymore.
 process.rating.title=Review
-process.rating=Review
+process.rating=Rating
 process.start.review=Start review
 process.states=Status
 question=Item analysis
