OO-3116: Show message if a question is not reviewable

--- a/src/main/java/org/olat/modules/qpool/ui/_i18n/LocalStrings_en.properties
+++ b/src/main/java/org/olat/modules/qpool/ui/_i18n/LocalStrings_en.properties
@@ -164,6 +164,8 @@ process.confirm.endOfLife=If a question is end of life, the question can not be 
 process.draft.set=The status of the question has been changed to "$\:lifecycle.status.draft".
 process.final.set=The status of the question has been changed to "$\:lifecycle.status.finalVersion".
 process.endOfLife.set=The end of life has been set.
+process.not.reviewable=No review
+process.not.reviewable.message=It is not possible to review questions in the format 'QTI 1.2'. Please convert the question to the format 'QTI 2.1' previously.
 process.revised.set=The status of the question has been changed to "$\:lifecycle.status.revised".
 process.review=Review
 process.review.set=The status of the question has been changed to "$\:lifecycle.status.review".
