--- a/src/main/java/org/olat/modules/qpool/ui/_i18n/LocalStrings_de.properties
+++ b/src/main/java/org/olat/modules/qpool/ui/_i18n/LocalStrings_de.properties
@@ -163,6 +163,8 @@ process.final=Final
 process.final.set=Der Status der Frage wurde auf "$\:lifecycle.status.finalStatus" ge\u00E4ndert.
 process.endOfLife=End of life
 process.endOfLife.set=Das end of life wurde gesetzt.
+process.not.reviewable=Keine Beurteilung
+process.not.reviewable.message=Fragen im Format 'QTI 1.2' k\u00F6nnen nicht beurteilt werden. Bitte konvertieren Sie die Frage zuerst in das Format 'QTI 2.1'.
 process.review=Beurteilung
 process.review.started=Der Beurteilungsprozess wurde gestartet.
 process.revision=Revision
