OO-3110: New grouping of the metadata and view as accordeon

--- a/src/main/java/org/olat/modules/qpool/ui/_i18n/LocalStrings_de.properties
+++ b/src/main/java/org/olat/modules/qpool/ui/_i18n/LocalStrings_de.properties
@@ -47,7 +47,7 @@ educational.learningTime.minute=m
 educational.learningTime.second=s
 error.input.toolong=Leider ist Ihr gerade eingegebener Text mit {1} Zeichen zu lang. Bitte beschr\u00E4nken Sie sich auf maximal {0} Zeichen.
 error.select.one=Sie m\u00FCssen mindestens eine Frage w\u00E4hlen.
-error.wrongFloat=Falsches Zahlenformat. Beispiele\: 1.0, 0.5, 0.2
+error.wrongFloat=Falsches Zahlenformat. Beispiele\: 1.0, 0.5,§ 0.2
 export.item=Export
 general=Allgemein
 general.additional.informations=Zusatzinformationen
@@ -222,8 +222,9 @@ share.presentation.title=Freigaben
 shared=Freigegeben
 sharing=Freigabe / Autoren
 sharing.author.name=Name
-sharing.authors=Autoren
 sharing.shares=Gruppen
+sharing.shares.empty.table=Diese Frage ist mit keiner Gruppe freigegeben.
+sharing.pools.empty.table=Diese Frage ist in keinem Pool freigegeben.
 source.status.draft=$\:lifecycle.status.draft ({0})
 source.status.review=$\:lifecycle.status.review ({0})
 source.status.revised=$\:lifecycle.status.revised ({0})
@@ -235,6 +236,7 @@ technical.editor=Editor
 technical.editorVersion=Editor Version
 technical.format=Format
 technical.lastModified=Letzte \u00C4nderung
+technical.statusLastModified=Letzte \u00C4nderung Status
 technics=Technik
 topnav.qpool=Fragenpool
 topnav.qpool.alt=Fragedatenbanken und Freigabe von Fragen
