--- a/src/main/java/org/olat/modules/qpool/ui/_i18n/LocalStrings_en.properties
+++ b/src/main/java/org/olat/modules/qpool/ui/_i18n/LocalStrings_en.properties
@@ -224,8 +224,9 @@ share.presentation.title=Shares
 shared=Shared
 sharing=Share / authors
 sharing.author.name=Name
-sharing.authors=Authors
 sharing.shares=Groups
+sharing.shares.empty.table=This question is not shared with any group.
+sharing.pools.empty.table=This question is not shared in any pool.
 source.status.draft=$\:lifecycle.status.draft ({0})
 source.status.review=$\:lifecycle.status.review ({0})
 source.status.revised=$\:lifecycle.status.revised ({0})
@@ -237,6 +238,7 @@ technical.editor=Editor
 technical.editorVersion=Editor Version
 technical.format=Format
 technical.lastModified=Last modified
+technical.statusLastModified=Status last modified
 technics=Technical
 topnav.qpool=Question bank
 topnav.qpool.alt=Question pools and shares
