OO-2967: refactor the list of assessed identities in assessment tools to be delivered by the resource or the course element them self

--- a/src/main/java/org/olat/course/nodes/iq/_i18n/LocalStrings_de.properties
+++ b/src/main/java/org/olat/course/nodes/iq/_i18n/LocalStrings_de.properties
@@ -5,6 +5,8 @@ Intro.surv=Dr\u00FCcken Sie Start, um mit dem Fragebogen zu beginnen.
 Intro.test=Dr\u00FCcken Sie Start, um den Test zu beginnen.
 attempts.nomoreattempts=Es stehen Ihnen keine weiteren Versuche zur Verf\u00FCgung.
 attempts.yourattempts=Anzahl gemachter Versuche
+button.export=Resultate exportieren
+button.stats=$org.olat.ims.qti.statistics.ui\:menu.title
 changelog.title=\u00C4nderungsverlauf der Ressource
 choosenfile.self=Selbsttest
 choosenfile.surv=Fragebogen
@@ -30,6 +32,7 @@ correction.auto=Auto
 correction.manual=Manuell
 correction.mode=Korrektur
 correction.mode.help=Bei einer Auto Korrektur wird das Resultat sofort angezeigt. Bei der Manuell Korrektur muss die Sichtbarkeit im Bewertungswerkzeug ge\u00E4ndert werden. F\u00FCr die Fragetypen Freitext, Zeichnen und Datei hochladen ist Manuell Korrektur zwingend.
+correction.test.title=Korrigieren
 correcttest=Test korrigieren
 coursefolder=Ablageordner Kurs "{0}"
 digital.signature=Testquittung erstellen
@@ -151,6 +154,8 @@ replace.wizard.title.step1=Neue Lernressource ausw\u00E4hlen
 replace.wizard.title.step2=Informationen zu den Resultaten
 replace.wizard.title.step3=Benutzer informieren
 reporter.unavailable=$de.bps.onyx.plugin.course.nodes.iq\:reporter.unavailable
+reset.test.data.title=Daten von Test zur\u00FCcksetzen
+retrieve.tests.title=$org.olat.ims.qti.statistics.ui\:menu.pull.tests.title
 retrievetest.confirm.text=$org.olat.ims.qti\:retrievetest.confirm.text
 score.cut=Notwendige Punktzahl f\u00FCr "Bestanden"
 score.max=Punktemaximum
@@ -166,6 +171,8 @@ showResults.visibility.future=Die Resultate werden angezeigt sobald die Korrektu
 start=Start
 table.header.lastModified=Last modified
 table.header.results=Resultaten
+table.header.extra.time=Zusatz
+table.header.end.date=Enddatum
 tool.delete.data=Alle Daten zur\u00FCcksetzen
 tool.extra.time=Testzeit verl\u00E4ngern
 tool.pull=Laufender test einziehen
