--- a/src/main/java/org/olat/course/nodes/iq/_i18n/LocalStrings_en.properties
+++ b/src/main/java/org/olat/course/nodes/iq/_i18n/LocalStrings_en.properties
@@ -5,6 +5,7 @@ Intro.test=Press the start button to begin with your test.
 assessment.documents.title=Assessment documents
 attempts.nomoreattempts=There are no more attempts at your disposal.
 attempts.yourattempts=Number of attempts
+button.stats=$org.olat.ims.qti.statistics.ui\:menu.title
 changelog.title=Resource change log
 choosenfile.self=Self-test
 choosenfile.surv=Questionnaire
@@ -30,6 +31,7 @@ correction.auto=Auto
 correction.manual=Manual
 correction.mode=Correction
 correction.mode.help=For Auto correction the result is shown immediately. For Manual correction the visibility need to be changed in the assessment tool. For the question types essay, drawing and file upload a manual correction is mandatory.
+correction.test.title=Grade
 correcttest=Correct test
 coursefolder=Storage folder of course "{0}"
 digital.signature=Test receipt
@@ -151,6 +153,8 @@ replace.wizard.title.step1=Select new learning resource
 replace.wizard.title.step2=Information on results
 replace.wizard.title.step3=Notify users
 reporter.unavailable=$de.bps.onyx.plugin.course.nodes.iq\:reporter.unavailable
+reset.test.data.title=Reset data of test
+retrieve.tests.title=$org.olat.ims.qti.statistics.ui\:menu.pull.tests.title
 retrievetest.confirm.text=$org.olat.ims.qti\:retrievetest.confirm.text
 score.cut=Passed cut value
 score.max=Maximum score
@@ -164,6 +168,8 @@ showResults.title=Results
 showResults.visibility=Your results will be displayed from "{0}" until "{1}"
 showResults.visibility.future=Your results will be displayed here as soon as the correction has been completed.
 start=Start
+table.header.end.date=End date
+table.header.extra.time=Extra
 table.header.lastModified=Last modified
 table.header.results=Results
 time.limit.max=Time limit
