--- a/src/main/java/org/olat/course/nodes/iq/_i18n/LocalStrings_fr.properties
+++ b/src/main/java/org/olat/course/nodes/iq/_i18n/LocalStrings_fr.properties
@@ -30,7 +30,8 @@ correction.auto=Automatique
 correction.manual=Manuelle
 correction.mode=Correction
 correction.mode.help=Pour la correction automatique, le r\u00E9sultat s'affiche imm\u00E9diatement. Pour la correction manuelle, la visibilit\u00E9 doit \u00EAtre modifi\u00E9e dans l'outil d'\u00E9valuation. Pour les types de questions texte libre, dessin et t\u00E9l\u00E9chargement de fichier, une correction manuelle est obligatoire.
-correcttest=Corriger le Test
+correction.test.title=Corriger
+correcttest=Corriger le test
 coursefolder=Dossier stockage cours "{0}"
 digital.signature=Signature digitale
 digital.signature.download=Signature digitale
