--- a/src/main/java/org/olat/course/nodes/iq/_i18n/LocalStrings_it.properties
+++ b/src/main/java/org/olat/course/nodes/iq/_i18n/LocalStrings_it.properties
@@ -25,6 +25,7 @@ condition.accessibility.title=Accesso
 correction.auto=Automatica
 correction.manual=Manuale
 correction.mode=Correzione
+correction.test.title=Valutazione
 correcttest=Correggi test
 coursefolder=Cartella di deposito del corso "{0}"
 digital.signature=Ricevuta test
