--- a/src/main/java/org/olat/course/nodes/iq/_i18n/LocalStrings_zh_CN.properties
+++ b/src/main/java/org/olat/course/nodes/iq/_i18n/LocalStrings_zh_CN.properties
@@ -5,6 +5,7 @@ Intro.test=\u70B9\u51FB"\u5F00\u59CB"\u6309\u94AE\u53C2\u4E0E\u6D4B\u8BD5
 attempts.nomoreattempts=\u4F60\u4E0D\u80FD\u518D\u6B21\u542F\u52A8\u8BE5\u6D4B\u8BD5
 attempts.yourattempts=\u5C1D\u8BD5\u6B21\u6570
 changelog.title=\u8D44\u6E90\u53D8\u66F4\u65E5\u5FD7
+correction.test.title=\u8BC4\u5206
 
 
 
