--- a/src/main/java/org/olat/course/nodes/iq/_i18n/LocalStrings_pt_BR.properties
+++ b/src/main/java/org/olat/course/nodes/iq/_i18n/LocalStrings_pt_BR.properties
@@ -30,6 +30,7 @@ correction.auto=Auto
 correction.manual=Manual
 correction.mode=Corre\u00E7\u00E3o
 correction.mode.help=Para a corre\u00E7\u00E3o autom\u00E1tica, o resultado \u00E9 mostrado imediatamente. Para corre\u00E7\u00E3o manual, a visibilidade precisa ser alterada na ferramenta de avalia\u00E7\u00E3o. Para os tipos de perguntas ensaio, desenho e carregamento de arquivos, \u00E9 obrigat\u00F3ria uma corre\u00E7\u00E3o manual.
+correction.test.title=Grau
 correcttest=Teste correto
 coursefolder=Pasta de armazenamento do curso "{0}"
 digital.signature=Recibo de teste
